add complet project

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,14 @@
   </div>
 
   <div class="row mt-5">
-    <div class="col-12 mt-3 col-md-4">
+    <div class="col-3 mt-3 col-md-4">
       <app-statistic></app-statistic>
     </div>
-    <div class="col-12 mt-3 col-md-4">
+    <div class="col-9 mt-3 col-md-8">
       <router-outlet></router-outlet>
     </div>
-    <div class="col-12 mt-3 col-md-4">
-      <app-list-car-in-parking></app-list-car-in-parking>
-    </div>
+<!--    <div class="col-12 mt-3 col-md-4">-->
+<!--      <app-list-car-in-parking></app-list-car-in-parking>-->
+<!--    </div>-->
   </div>
 </div>
