--- a/src/app/statistic/statistic.component.html
+++ b/src/app/statistic/statistic.component.html
@@ -1,11 +1,14 @@
 <div class="Charts">
   <div class="pie" [chart]="pieChart">
 
-  </div >
-</div>
-
-<div class="Charts">
-  <div class="line" [chart]="lineChart">
+    <div>{{this.nbrT}}</div>
+    <div>{{this.inP}}</div>
 
   </div >
 </div>
+
+<!--<div class="Charts">-->
+<!--  <div class="line" [chart]="lineChart">-->
+
+<!--  </div >-->
+<!--</div>-->
