--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <img src="assets/img/parking.png" width="60" height="40">
+    <i class="bi bi-p-circle custom-icon button-85" ></i>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,11 +9,12 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" routerLink="/"></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/Client">Add Client</a>
-        </li>
+
         <li class="nav-item">
           <a class="nav-link" routerLink="/Abonement">Add Abonment</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/Client">Add Client</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/Car">Add Car</a>
